# MovieSentiments

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
moviesentiments/: main.py
moviesentiments/app/: Home.py  card.py
moviesentiments/app/pages/: 1_Make_Prediction.py  2_Training_Progress.py  3_Epoch_Metrics.py
moviesentiments/data/model/: bias.npy  le.pkl  vectorizer.pkl  weights.npy
moviesentiments/model/: logistic_regression.py  predict.py  train.py
moviesentiments/utils/: early_stopper.py  install_nltk_data.py  plot_graphs.py  preprocess.py
moviesentiments_lr/: main.py  train.py
moviesentiments_lr/app/: Home.py  card.py  index.py
moviesentiments_lr/app/pages/: 1_Make_Prediction.py  2_Training_Progress.py  3_Epoch_Metrics.py
moviesentiments_lr/data/model/: bias.npy  weights.npy
moviesentiments_lr/model/: logistic_regression.py  predict.py  train.py
moviesentiments_lr/utils/: early_stopping.py  plot_graphs.py
